--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -15,6 +15,8 @@
         cta = "Confirm and add location";
     }
 
+    var linkFlow = Model.Flow == JourneyFlow.Edit ? JourneyFlow.Edit : JourneyFlow.AddRedo;
+
     ViewData["Title"] = title;
 }
 
@@ -27,20 +29,24 @@
         <h1 class="govuk-heading-l">@title</h1>
 
         <summary-list>
-            <summary-list-row key="Name" action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Service_Name)">
+            <summary-list-row key="Name"
+                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Service_Name, linkFlow)">
                 @service.Name
             </summary-list-row>
 
-            <summary-list-row key="Types of support offered" action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Support_Offered)">
+            <summary-list-row key="Types of support offered"
+                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Support_Offered, linkFlow)">
                 Todo
             </summary-list-row>
             
             @* todo: add support for class to summary-list-row *@
-            <summary-list-row key="Description" action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Service_Description)">
+            <summary-list-row key="Description"
+                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Service_Description, linkFlow)">
                 <span class="app-pre-wrap">@service.Description</span>
             </summary-list-row>
 
-            <summary-list-row key="For children and young people?" action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Who_For)">
+            <summary-list-row key="For children and young people?"
+                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Who_For, linkFlow)">
                 @if (service.ForChildren == false)
                 {
                     <text>No</text>
@@ -52,7 +58,8 @@
                 }
             </summary-list-row>
 
-            <summary-list-row key="Languages" show-empty action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.What_Language)">
+            <summary-list-row key="Languages" show-empty
+                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.What_Language, linkFlow)">
                 @string.Join(", ", service.LanguageCodes!
                     .Select(lc => ServiceDirectory.Shared.ReferenceData.Languages.CodeToName[lc]))
                 
@@ -75,7 +82,8 @@
                 }
             </summary-list-row>
 
-            <summary-list-row key="Does the service cost money to use?" action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Service_Cost)">
+            <summary-list-row key="Does the service cost money to use?"
+                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Service_Cost, linkFlow)">
                 @if (service.HasCost == true)
                 {
                     <text>Yes, it costs money to use. @service.CostDescription</text>
@@ -86,7 +94,8 @@
                 }
             </summary-list-row>
 
-            <summary-list-row key="When" show-empty action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Times)">
+            <summary-list-row key="When" show-empty
+                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Times, linkFlow)">
                 When page is being replaced
             </summary-list-row>
 
