--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -49,7 +49,7 @@
 
             <summary-list-row key="More details" show-empty action1="Change"
                               action1-href="@Model.GetLocationPageUrl(LocationJourneyPage.Location_Information, linkFlow)">
-                @Model.LocationModel!.Description
+                <span class="app-pre-wrap">@Model.LocationModel!.Description</span>
             </summary-list-row>
         </summary-list>
         
