--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using FamilyHubs.ServiceDirectory.Shared.ReferenceData.ICalendar
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.Service_DetailModel
 @{
     var service = Model.ServiceModel ?? throw new ArgumentNullException(nameof(Model.ServiceModel));
@@ -97,7 +98,7 @@
 
             <summary-list-row key="When" show-empty
                               action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Times, linkFlow)">
-                @string.Join(", ", service.Times!.Select(c => Service_DetailModel.CodeToName[c]))
+                @string.Join(", ", service.Times!.Select(c => Calendar.DayCodeToName[c]))
             </summary-list-row>
 
             @* todo: description is user entered. strip html out of user content first *@
