--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -35,9 +35,16 @@
                 @service.Name
             </summary-list-row>
 
-            <summary-list-row key="Types of support offered"
+            <summary-list-row key="Support it offers"
                               action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Support_Offered, linkFlow)">
-                Todo
+                @foreach (var categoryId in service.SelectedSubCategories)
+                {
+                    var categoryName = Model.TaxonomySubCategories?.FirstOrDefault(c => c.Id == categoryId)?.Name;
+                    if (categoryName != null)
+                    {
+                        @categoryName <br />
+                    }
+                }
             </summary-list-row>
             
             @* todo: add support for class to summary-list-row *@
