--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
@@ -4,4 +4,8 @@
     ViewData["Title"] = "On which days can people use this service?";
 }
 
+@section Back {
+    <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
+}
+
 <partial name="_CheckboxesPage" model="Model" />
