--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/How-Use.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/How-Use.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.Service_How_UseModel
+@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.How_UseModel
 @{
     ViewData["Title"] = "How can people use this service?";
 }
