Update UI elements and refactor legend text handling
Updated the header tag in `Service-Description-Content.cshtml` for better visual hierarchy. Refactored the `Legend` property in `Add_LocationModel` class by setting it to `null` and moving the text to a new view `add-location-content.cshtml`. Also, set the `DescriptionPartial` property to `"add-location-content"`. Created a new view `add-location-content.cshtml` with a header and a paragraph to handle the legend text.

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Description-Content.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Description-Content.cshtml
@@ -1,4 +1,2 @@
-﻿<h1 class="govuk-label--l">
-    Give a description of the service
-</h1>
+﻿<h1 class="govuk-heading-l">Give a description of the service</h1>
 <p>Provide a brief summary of the support and activities offered. You do not need to add information such as opening times and contact details at this stage.</p>
