--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/Location-Details.cshtml
@@ -20,6 +20,7 @@
     ViewData["Title"] = title;
 }
 
+@*todo: can't just use fh-back-link, need to figure it out *@
 @section Back {
     <a class="govuk-back-link fh-back-link">Back</a>
 }
