--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -1,5 +1,4 @@
 ﻿@page
-@using FamilyHubs.ServiceDirectory.Shared.Enums
 @using FamilyHubs.ServiceDirectory.Shared.ReferenceData.ICalendar
 @using FamilyHubs.SharedKernel.Enums
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.Service_DetailModel
@@ -23,6 +22,7 @@
     ViewData["Title"] = title;
 }
 
+@*todo: can't just use fh-back-link, need to figure it out *@
 @section Back {
     <a class="govuk-back-link fh-back-link">Back</a>
 }
