--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
@@ -15,6 +15,23 @@
         <p>Only locations that have been added for your [TODO: local authority/organisation's] will appear here.</p>
 
         <form method="post" novalidate>
+            
+            <select id="location" name="location" class="govuk-select">
+@*                 @foreach (var option in Model.Locations)
+                {
+                    <!option value="@option.Value"
+                             @(option.Value == item.Value ? "selected" : "")
+                             @(option.Value == What_LanguageModel.NoLanguageValue ? "disabled" : "")>@option.Text</!option>
+                } *@
+                @* add the invalid language as an option, so that we can be selected initially in the autocomplete *@
+                @* todo: this means that the invalid language is now in the drop-down, which isn't ideal *@
+@*                 @if (item.Value == What_LanguageModel.InvalidNameValue)
+                {
+                    <option value="@item.Value" selected hidden disabled>@item.Text</option>
+                } *@
+            </select>
+
+
             <p>If the location does not appear here you can <a href="/manage-locations/start-add-location?journey=@Journey.Service">add a new location</a>.</p>
 
             <button type="submit" class="govuk-button" data-module="govuk-button">
