--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
@@ -20,17 +20,18 @@
         <form method="post" novalidate>
             
             <select id="select-location-location" name="location" class="govuk-select">
+                <!option value="-1"></!option>
+
                 @foreach (var location in Model.Locations)
                 {
                     <!option value="@location.Id"
-@*                              @(location.Id == @Model.SelectedLocationId ? "selected" : "") *@
+                             @*                              @(location.Id == @Model.SelectedLocationId ? "selected" : "") *@
                              @* @(option.Value == What_LanguageModel.NoLanguageValue ? "disabled" : "") *@
-                             @* todo: there's a helper for this *@
-                             >@string.Join(", ", location.Name, location.Address1)</!option>
+                             @* todo: there's a helper for this *@>@string.Join(", ", location.Name, location.Address1)</!option>
                 }
                 @* add the invalid language as an option, so that we can be selected initially in the autocomplete *@
                 @* todo: this means that the invalid language is now in the drop-down, which isn't ideal *@
-@*                 @if (item.Value == What_LanguageModel.InvalidNameValue)
+                @*                 @if (item.Value == What_LanguageModel.InvalidNameValue)
                 {
                     <option value="@item.Value" selected hidden disabled>@item.Text</option>
                 } *@
