--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
@@ -2,11 +2,18 @@
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.Select_LocationModel
 @{
     ViewData["Title"] = "Search and select a location to add to this service";
+
+    //todo: diff id if js enabled/disabled? language works afair
+    Model.Errors.ErrorIdToHtmlElementId = errorId => "select-location-location";
+
+    var error = Model.Errors.GetErrorIfTriggered();
 }
 
 @section Back {
     <a href="@Model.BackUrl" class="govuk-back-link">Back</a>
 }
+
+<partial name="_ErrorSummaryNext" for="@Model.Errors" />
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -18,25 +25,29 @@
         }
 
         <form method="post" novalidate>
-            
-            <select id="select-location-location" name="location" class="govuk-select">
-                <!option value="-1"></!option>
 
-                @foreach (var location in Model.Locations)
-                {
-                    <!option value="@location.Id"
-                             @*                              @(location.Id == @Model.SelectedLocationId ? "selected" : "") *@
-                             @* @(option.Value == What_LanguageModel.NoLanguageValue ? "disabled" : "") *@
-                             @* todo: there's a helper for this *@>@string.Join(", ", location.Name, location.Address1)</!option>
-                }
-                @* add the invalid language as an option, so that we can be selected initially in the autocomplete *@
-                @* todo: this means that the invalid language is now in the drop-down, which isn't ideal *@
-                @*                 @if (item.Value == What_LanguageModel.InvalidNameValue)
+            <div class="govuk-form-group @error?.FormGroupClass">
+                
+                <partial name="_ErrorMessageNext" model="@error" />
+
+                <select id="select-location-location" name="location" class="govuk-select @error?.SelectClass">
+                    <!option value="-1"></!option>
+
+                    @foreach (var location in Model.Locations)
+                    {
+                        <!option value="@location.Id"
+                                 @*                              @(location.Id == @Model.SelectedLocationId ? "selected" : "") *@
+                                 @* @(option.Value == What_LanguageModel.NoLanguageValue ? "disabled" : "") *@
+                                 @* todo: there's a helper for this *@>@string.Join(", ", location.Name, location.Address1)</!option>
+                    }
+                    @* add the invalid language as an option, so that we can be selected initially in the autocomplete *@
+                    @* todo: this means that the invalid language is now in the drop-down, which isn't ideal *@
+                    @*                 @if (item.Value == What_LanguageModel.InvalidNameValue)
                 {
                     <option value="@item.Value" selected hidden disabled>@item.Text</option>
                 } *@
-            </select>
-
+                </select>
+            </div>
 
             <p>If the location does not appear here you can <a href="/manage-locations/start-add-location?journey=@Journey.Service">add a new location</a>.</p>
 
